[workspace]
members = [
  "contracts/trust-lines",
  "contracts/payment-channels",
  "contracts/escrow",
  "contracts/checks",
  "contracts/dex-orders",
  "contracts/did-manager",
  "contracts/deposit-authorization",
  "contracts/deposit-preauth",
  "contracts/signer-list",
  "contracts/account-delete",
  "packages/shared",
]

[workspace.package]
version = "0.1.0"
authors = ["Quigles1337"]
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
