[package]
name = "did_manager"
version = "0.1.0"
authors = ["Quigles1337 <adz@alphx.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-did_manager = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
